# QQ-summary-bot

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  summary_bot_verify.db  summary_bot_verify_gpt54.db  summary_bot_verify_gpt54_v2.db  summary_bot_verify_gpt54_v3.db
app/: __init__.py  config.py  main.py  scheduler.py  schemas.py
app/api/: routes_collector.py  routes_health.py  routes_messages.py  routes_mobile.py  routes_reports.py
app/collector/: __init__.py  base.py  file_replay_collector.py  mock_collector.py  qq_notification_collector.py
app/llm/: client.py  prompts.py  schemas.py
app/pipeline/: __init__.py  alerting.py  classifier.py  clusterer.py  dedup.py  normalizer.py  rule_engine.py  summarizer.py
app/services/: analysis_service.py  collector_service.py  ingest_service.py  mobile_service.py  report_service.py
app/storage/: __init__.py  db.py  models.py  repositories.py
app/ui/static/: index.html  manifest.webmanifest  mobile.css  mobile.js  sw.js
collector-android/: README.md  settings.gradle.kts
collector-android/app/: build.gradle.kts
collector-android/app/src/main/: AndroidManifest.xml
data/: keyword_rules.json  mock_messages.jsonl
docs/: ENV_SETUP.md
scripts/: debug_llm_response.py  debug_llm_tool_call.py  debug_qq_notifications.py  run_demo.py  seed_mock_messages.py
tests/: test_classifier.py  test_collector_and_mobile_services.py  test_end_to_end.py  test_normalizer.py  test_qq_notification_collector.py  test_rule_engine.py  test_summarizer.py
(+13 files in other folders)
