[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summary-bot"
version = "0.1.0"
description = "QQ text message summarizer for baoyan-related group chats."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "apscheduler>=3.10",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "socksio>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
